# pogonFiz

./: CMakeLists.txt  README.md
pogonFiz/: CMakeLists.txt  pogonFiz.cpp  pogonFiz.h
pogonFiz/include/header/: inc.h  krog.h  krogList.h  pogon.h  pravokotnik.h  pravokotnikList.h  svet.h  telesaList.h  telo.h  upraviteljTeles.h
pogonFiz/include/source/: pogon.cpp  svet.cpp
pogonFiz/include/src/: krog.cpp  pogon.cpp  pravokotnik.cpp  svet.cpp  telo.cpp  upraviteljTeles.cpp
